# 3d_teleoperation_interface

./: .gitignore  CMakeLists.txt  LINCESE  README.md  package.xml  setup.cfg  setup.py
config/: 3d_visualizer_config.yaml  DDS_configuration.xml  d435i_calibration.yaml  general_config.yaml  general_configuration.yaml  robot_information.yaml  ros2_node_list.yaml  ros2_topic_list.yaml  rviz_config.rviz  teleoperation_config.yaml
docker/: build.sh  devel.Dockerfile  run_dev_docker.sh
launch/: visualizer.launch.py  visualizer_launch.launch.py
log/: latest_list
models/gripper/: gripper.20241210-203224.FCBak  gripper.FCStd
msg/: MultipleTrajectories.msg  TrajectoryArray.msg
ros2_3d_interface/: 3d_interface.py  3d_real_time.py  line_of_sight.py  record_pcl.py  trajectory.py  trajectory_verify.py
ros2_3d_interface/common/: darkstyle.py  graphs.py  read_configuration.py  status_led.py  styles.py
ros2_3d_interface/utilities/: LineGeometry.py  Mesh.py  PointCloudGeometry.py  camera.py  gui_assets.py  shape.py  utils.py  viewer.py
scripts/: 3d_interface.py  3d_real_time.py  3d_viewer.py  line_of_sight.py  record_pcl.py  streamdeck.py  trajectory.py
scripts/3d_interface/: 3d_viewer.py
scripts/teleoperation/: insta_360_controller.py  network_window.py  robot_window.py  stream_window.py
scripts/tools/: dummy_trajectory.py  screen_recording.py  screen_viewer.py  streamdeck.py
src/: cloud_separation.cpp  point_cloud_publisher.cpp  trajectory.cpp  verify_line_of_sight.cpp
teleoperation_interface/: 3d_interface.py  3d_test.py  camera_publisher.py  display_information.py  imu_publisher.py  interface.py  main.qml  random_markers.py
viewer/: 3d_viewer.py
viewer/viewer_opengl/: camera.py  shape.py  viewer.py
